<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/tema_aplicacio"
    android:background="@color/background"
    android:padding="@dimen/paddingLayout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/aplicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopTitol"
        android:fontFamily="@font/abnes"
        android:gravity="center"
        android:text="@string/titol"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <soup.neumorphism.NeumorphButton
        style="@style/Widget.Neumorph.Button"
        android:textColor="@color/text_color"
        android:id="@+id/jugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopButton"
        android:fontFamily="@font/abnes"
        android:text="@string/jugar"
        android:textSize="18sp" />

    <soup.neumorphism.NeumorphButton
        style="@style/Widget.Neumorph.Button"
        android:textColor="@color/text_color"
        android:id="@+id/configurar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abnes"
        android:text="@string/configurar"
        android:textSize="18sp" />

    <soup.neumorphism.NeumorphButton
        style="@style/Widget.Neumorph.Button"
        android:textColor="@color/text_color"
        android:id="@+id/acerca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abnes"
        android:text="@string/acerca"
        android:textSize="18sp" />

    <soup.neumorphism.NeumorphButton
        style="@style/Widget.Neumorph.Button"
        android:textColor="@color/text_color"
        android:id="@+id/salir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abnes"
        android:text="@string/salir"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sortida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.gesture.GestureOverlayView
        android:id="@+id/gestures"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gestureStrokeType="multiple"
        android:fadeOffset="800" />

</LinearLayout>